# Datadex-Pokemon-Lab

./: .coverage  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  agents.json  app.py  data_manager.py  deploy_agent.py  fetch_api_data.py  pyproject.toml  visualizations.py  worksheet.py
assets/: CHEAT_SHEET.md  clientside.js  custom.css  image_fallback.js  pokemon_functions.js  selection_fix.js
data/: pokemon.parquet
docs/: CHEAT_SHEET.md  DECISIONS.md  FunctionsAsProps.md  IMPLEMENTATION_PLAN.md  IMPORTANT_TODOS.md  Multiselect.md  TODO.md  USER_GUIDE.md  agent_handoff.md  potential_improvements.md  technical_document.md  walkthrough.md
docs/archive/: TASKS.md  implementation_plan.md
scripts/: generate_cheatsheet_pdf.py  generate_guide_pdf.py  generate_worksheet_pdf.py  prefetch_assets.py
src/: callbacks.py  callbacks_charts.py  callbacks_details.py  callbacks_discovery.py  callbacks_team.py  components.py  constants.py  data.py  filters.py  layout.py  stats_logic.py  utils.py
tests/: conftest.py  test_callbacks.py  test_data_manager.py  test_fetch_api_data.py  test_ui_interactions.py  test_visualizations.py
