[project]
name = "datadex-pokemon-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash",
    "plotly",
    "dash-mantine-components",
    "pandas",
    "pyarrow",
    "requests",
    "loguru",
    "pillow",
]

[dependency-groups]
dev = [
    "pandas-stubs",
    "pytest",
    "pytest-mock",
    "ruff",
    "mypy",
    "pytest-cov",
    "dash[testing]",
    "webdriver-manager",
    "urllib3",
]
[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "plotly.*",
    "dash.*",
]
ignore_missing_imports = true
