[project]
name = "datadex-pokemon-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash",
    "plotly",
    "dash-mantine-components",
    "pyarrow",
    "requests",
    "loguru",
    "pillow",
    "duckdb",
    "dash-iconify>=0.1.2",
    "diskcache>=5.6.3",
]

[dependency-groups]
dev = [
    "pandas-stubs",
    "pytest",
    "pytest-mock",
    "ruff",
    "mypy",
    "pytest-cov",
    "dash[testing]",
    "webdriver-manager",
    "urllib3",
    "pre-commit>=4.5.1",
]
[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "plotly.*",
    "dash.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
